{
    "name": "GameInputAction",
    "maps": [
        {
            "name": "Running",
            "id": "24702c35-e376-4cf3-a3c5-4e6e307a8067",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Button",
                    "id": "b8c5e7ac-9d77-4a2c-9496-f46884c5dd53",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "ca47c239-8399-4f78-918e-92d886aa486a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "666e28aa-3268-49e0-9e84-df31b51b864e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "c5f2421c-f57f-4809-9723-562e06f3faec",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "6c43b327-6a14-4c99-8f76-ea3341692023",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "29ecfbb7-7992-4579-87ad-30ce4058fe36",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MenuControl",
            "id": "0a94e402-0e9c-408d-8063-f426a0b99e07",
            "actions": [
                {
                    "name": "Acept",
                    "type": "Button",
                    "id": "2f61cf97-204d-4f84-9b74-85946bf7a491",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Return",
                    "type": "Button",
                    "id": "66e09fdf-c571-4a95-95a9-12dca08f2219",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1ffa104a-480e-4525-8786-ed83a5cef8e5",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Acept",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c80aa1c-0fde-4efb-91a1-29d69a89a033",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Acept",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52207ad5-2c79-4cd8-9d5e-1274b7431c2e",
                    "path": "<Keyboard>/backspace",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Return",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "585ba111-ef06-4587-82d5-c6916d1ecea5",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Return",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "DebugControl",
            "id": "91f5b37d-78b8-45e7-a6cb-c2d62cd774b1",
            "actions": [
                {
                    "name": "ResetScene",
                    "type": "Button",
                    "id": "5b4232ee-b5f2-4ca3-826d-950abb94e7ec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CloseGame",
                    "type": "Button",
                    "id": "c9028880-7306-4795-bd1f-958aef0d19b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "06317c0e-4cec-4c97-8a2c-3022f2357fc0",
                    "path": "<Keyboard>/backspace",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ResetScene",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "417a35e1-500b-42b9-820f-913b9a954945",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TouchSwipe",
            "id": "87832b4b-351b-4072-94d7-a655c9a7916a",
            "actions": [
                {
                    "name": "Contact",
                    "type": "PassThrough",
                    "id": "7af52777-ec8d-42cc-989a-0a8426d0c29b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Position",
                    "type": "PassThrough",
                    "id": "2b167e07-6a94-43bb-802b-269739de4de3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "85d5d506-b405-4bdd-af57-82b133de7d6c",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Contact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66f12a77-4d63-4c7e-9b70-f5eae5df697d",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Contact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4e4b420-f00d-451c-aa86-f8c9d1282df5",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "137a30f1-daad-4e0d-b740-c52f57ec8d9d",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}